Change the Index page texts

--- a/src/components/blocks/CTA/BasicDark.astro
+++ b/src/components/blocks/CTA/BasicDark.astro
@@ -25,17 +25,17 @@ import badge from '../../../assets/badge.svg'
 		<Col span="1" />
 		<Col span="10">
 			<CTA
-				title="Join Over 30,000 Satisfied Users!"
-				text="Discover why thousands of professionals trust our platform to streamline their workflow and enhance productivity. Get started today and see the difference for yourself!"
+				title="Un primer paso para mejorar tu bienestar"
+				text="No es necesario que atravieses una crisis para comenzar. La terapia y las evaluaciones psicológicas son herramientas para cuidar de vos, ganar confianza y sentirte mejor día a día. Estoy para acompañarte."
 				mode="dark"
 				bg={ctaImage}
 			>
 				<ChipNotification radius="rounded-full" classes="mb-6 box">
 					<Image src={badge} alt="Product of the Year" class="h-12 w-12" slot="button" />
-					<span class="hidden md:block">#1 Product of the Year,</span>
-					<Highlight classes="md:ml-2"> Product Hunt </Highlight>
+					<span class="hidden md:block">Cuidarte es la mejor decisión </span>
+					<Highlight classes="md:ml-2">que podés tomar hoy.</Highlight>
 				</ChipNotification>
-				<Button size="lg" style="primary"> Get started now! </Button>
+				<Button size="lg" style="primary"> Quiero empezar </Button>
 			</CTA>
 		</Col>
 		<Col span="1" />
