--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -13,9 +13,9 @@ import { Icon } from 'astro-icon/components'
 // Content
 // - SEO
 const SEO = {
-	title: 'Oops! Foxi Lost the Trail - Page Not Found',
+	title: 'Página no encontrada 😕 | Psicóloga en Jesús María y Online',
 	description:
-		" Looks like we chased our tail and lost the page. Don't worry, let's get you back on the Foxi trail!"
+		"Parece que esta página no existe, pero la ayuda psicológica sí. Regresa al inicio y agenda tu consulta para terapia o evaluaciones psicológicas."
 }
 ---
 
@@ -130,7 +130,7 @@ const SEO = {
 			<Col span="2" />
 			<Col span="8">
 				<Spacer size="2" desktopSize="4" />
-				<Button link="/"> Return to homepage <Icon name="long-arrow-right" /> </Button>
+				<Button link="/"> Volver a la página de Inicio <Icon name="long-arrow-right" /> </Button>
 			</Col>
 			<Col span="2" />
 		</Row>
