--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,9 +14,9 @@ import CTA from '../components/blocks/CTA/BasicDark.astro'
 import testimonialBackground from '../assets/testimonial-bg-01.webp'
 // - SEO
 const SEO = {
-	title: 'Foxi | Your Productivity Toolkit',
+	title: 'Lic. Priscila Giménez | Terapia y Evaluaciones Psicológicas',
 	description:
-		'Foxi is a powerful productivity toolkit designed to enhance your workflow and boost your productivity. With features like analytics, security, and integrations, Foxi is the perfect solution for your business.'
+		'Terapia psicológica online y presencial en Jesús María. Psicoterapia para adultos y jóvenes, Aptos Psicológicos y Evaluaciones. Contáctame hoy.'
 }
 ---
 
