Add base to links

--- a/src/components/blocks/hero/HomeCTA.astro
+++ b/src/components/blocks/hero/HomeCTA.astro
@@ -39,7 +39,7 @@ const avatars = [
 			<h1>Encuentra <strong>bienestar emocional</strong> con terapia personalizada</h1>
 
 			<p class="pb-0 text-lg">Te ayudo a manejar la ansiedad, el estrés y las dificultades emocionales con un enfoque integrativo. Atención online y presencial en Jesús María.</p>
-			<Button size="lg" link="/">Habla conmigo en WhatsApp</Button>
+			<Button size="lg" link="/foxi-astro-theme/#">Habla conmigo en WhatsApp</Button>
 		</Col>
 		<Col span="2" />
 		<Col span="2" />
