--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -22,7 +22,7 @@ const { footerAbout, footerColumns, subFooter } = footerNavigationData
 
             <!-- Logo y About -->
             <div>
-                <a aria-label="website logo" aria-current="page" class="footer__main-brand" href="/">
+                <a aria-label="website logo" aria-current="page" class="footer__main-brand" href="/foxi-astro-theme/">
                     <img src={footerAbout.logo.src} alt={footerAbout.logo.alt} width="32" height="32" />
                     {footerAbout.logo.text}
                 </a>
@@ -32,7 +32,7 @@ const { footerAbout, footerColumns, subFooter } = footerNavigationData
             <!-- Información de Contacto -->
             <div class="text-lg font-medium">
                 <h3 class="text-base font-medium leading-8 text-neutral-700 dark:text-neutral-50 mb-4 hidden">Contacto</h3>
-                <p><strong>Dirección:</strong> <a href="https://maps.app.goo.gl/eMVyhAZW8YwGuUdX8" target="_blank">Julio Argentino Roca 221, Jesus María, Córdoba</a></p>
+                <p><strong>Dirección:</strong> <a href="https://maps.app.goo.gl/eMVyhAZW8YwGuUdX8" target="_blank">Julio Argentino Roca 221, Jesús María, Córdoba</a></p>
                 <p><strong>Teléfono:</strong> <a href="tel:+543525419343" target="_blank">3525 41-9343</a></p>
                 <p class="hidden"><strong>Email:</strong> <a href="mailto:contacto@vesuviobakery.com.ar" target="_blank">contacto@vesuviobakery.com.ar</a></p>
                 <p><strong>Horarios de Atención:</strong> Lunes a viernes: 8:00 - 12:00 y 14:00 -20:00</p>
