Change texts at customer's request

--- a/src/components/blocks/features/FeatureCards.astro
+++ b/src/components/blocks/features/FeatureCards.astro
@@ -32,8 +32,8 @@ import feature05 from '../../../assets/cards/feature-05.svg'
 	<Row>
 		<Col span="4">
 			<Card
-				title="Psicoterapia para adultos y jóvenes"
-				subtitle="Terapia para ansiedad, estrés y dificultades emocionales. Espacio de confianza para el bienestar emocional, el autoconocimiento y el crecimiento personal."
+				title="Psicoterapia para adultos y jóvenes +18"
+				subtitle="Te ayudo a manejar el estrés, la ansiedad y las dificultades emocionales, generando un espacio de confianza y autoconocimiento para el logro de tus objetivos terapéuticos."
 				image={feature01}
 				link="/features"
 			/>
@@ -41,18 +41,18 @@ import feature05 from '../../../assets/cards/feature-05.svg'
 		<Col span="4" classes="flex flex-col gap-6">
 			<Card
 				title="Apto Psicológico"
-				subtitle="Evaluación profesional para certificar estabilidad emocional en trámites como licencias de conducir, porte de armas y empleos de alta responsabilidad."
+				subtitle="Evaluaciones psicológicas de aptitud para licencia de conducir particular y profesional, ingresos universitarios y empleos de alta responsabilidad."
 				image={feature02}
 				link="/features"
 			/>
 			<Card
 				title="Evaluaciones psicotécnicas para empresas y particulares"
-				subtitle="Pruebas científicas para selección de personal, certificaciones laborales y análisis de habilidades cognitivas y emocionales."
+				subtitle="Evaluaciones psicológicas en relación con puestos de trabajo, con el fin de permitir al empleador tomar decisiones o aplicar estrategias de acción en torno al postulante."
 				image={feature03}
 				link="/features"
 			/>
 		</Col>
-		<Col span="4" classes="flex flex-col gap-6">
+		<Col span="4" classes="flex flex-col gap-6 hidden">
 			<Card
 				title="Confianza y transparencia"
 				subtitle="La realización de evaluaciones no implica la obtención automática de un 'apto', ya que los resultados se ajustan objetivamente a lo observado durante el proceso."
