--- a/src/components/blocks/hero/HomeCTA.astro
+++ b/src/components/blocks/hero/HomeCTA.astro
@@ -36,10 +36,10 @@ const avatars = [
 				<strong>30K+</strong> satisfied customers
 				<AvatarGroup avatars={avatars} radius="rounded-full" slot="button" />
 			</ChipNotification>
-			<h1>Encuentra <strong>bienestar emocional</strong> con terapia personalizada</h1>
+			<h1>¿Necesitas <strong>ayuda profesional</strong> para reducir tu malestar y enfocarte en tu desarrollo personal?</h1>
 
-			<p class="pb-0 text-lg">Te ayudo a manejar la ansiedad, el estrés y las dificultades emocionales con un enfoque integrativo. Atención online y presencial en Jesús María.</p>
-			<Button size="lg" link="/foxi-astro-theme/#">Habla conmigo en WhatsApp</Button>
+			<p class="pb-0 text-lg">Te ayudo a reducir los síntomas de ansiedad y estrés, y a gestionar tus emociones con un enfoque personalizado.</p>
+			<Button size="lg" link="/foxi-astro-theme/#">Agenda tu primera sesión</Button>
 		</Col>
 		<Col span="2" />
 		<Col span="2" />
