--- a/src/components/blocks/head/Header.astro
+++ b/src/components/blocks/head/Header.astro
@@ -44,6 +44,8 @@ const {
 		noindex={noindex}
 	/>
 	<link rel="icon" href={configData.logo.src} type="image/svg+xml" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+	
 	<link rel="sitemap" href="/sitemap-index.xml" />
 	<meta name="generator" content={Astro.generator} />
 	<meta name="theme-color" content="#134e4a" />
