Update WhatsApp buttons

--- a/src/components/blocks/CTA/BasicDark.astro
+++ b/src/components/blocks/CTA/BasicDark.astro
@@ -35,7 +35,13 @@ import badge from '../../../assets/badge.svg'
 					<span class="hidden md:block">Cuidarte es la mejor decisión </span>
 					<Highlight classes="md:ml-2">que podés tomar hoy.</Highlight>
 				</ChipNotification>
-				<Button size="lg" style="primary"> Quiero empezar </Button>
+				<Button size="lg" style="primary" link="https://wa.me/543525419343?text=Hola, quiero comenzar terapia. ¿Cómo podemos coordinar la primera sesión?" classes="button--mobile">
+					Quiero empezar
+				</Button>
+				
+				<Button size="lg" style="primary" link="https://web.whatsapp.com/send?phone=543525419343&text=Hola, quiero comenzar terapia pero tengo algunas dudas antes de agendar mi primera sesión:" classes="button--desktop">
+					Quiero empezar
+				</Button>
 			</CTA>
 		</Col>
 		<Col span="1" />
