replace flex with inline-flex in button

--- a/src/components/ui/Button.astro
+++ b/src/components/ui/Button.astro
@@ -111,13 +111,13 @@ const {
 
 /* Oculta el botón de WhatsApp escritorio en móviles y tablets */
 .button--mobile {
-	display: flex;
+	display: inline-flex;
 }
 
 /* En pantallas grandes, mostramos el botón de escritorio y ocultamos el de móvil */
 @media (min-width: 1024px) {
 	.button--desktop {
-		display: flex;
+		display: inline-flex;
 	}
 	.button--mobile {
 		display: none;
