Add WhatsApp button on HomeCTA

--- a/src/components/blocks/hero/HomeCTA.astro
+++ b/src/components/blocks/hero/HomeCTA.astro
@@ -39,7 +39,14 @@ const avatars = [
 			<h1>¿Necesitas <strong>ayuda profesional</strong> para reducir tu malestar y enfocarte en tu desarrollo personal?</h1>
 
 			<p class="pb-0 text-lg">Te ayudo a reducir los síntomas de ansiedad y estrés, y a gestionar tus emociones con un enfoque personalizado.</p>
-			<Button size="lg" link="/foxi-astro-theme/#">Agenda tu primera sesión</Button>
+
+			<Button size="lg" style="primary" link="https://wa.me/543525419343?text=Hola, quiero comenzar terapia. ¿Cómo podemos coordinar la primera sesión?" classes="button--mobile">
+				Agenda tu primera sesión
+			</Button>
+			
+			<Button size="lg" style="primary" link="https://web.whatsapp.com/send?phone=543525419343&text=Hola, quiero comenzar terapia pero tengo algunas dudas antes de agendar mi primera sesión:" classes="button--desktop">
+				Agenda tu primera sesión
+			</Button>
 		</Col>
 		<Col span="2" />
 		<Col span="2" />
