--- a/src/components/blocks/highlights/HightlightRows.astro
+++ b/src/components/blocks/highlights/HightlightRows.astro
@@ -38,7 +38,7 @@ const highlightBlocks: HighlightBlock[] = [
 	},
 	{
 		title: 'Mi <strong>formación y experiencia</strong> académica',
-		text: 'Durante mi formación, realicé prácticas supervisadas y mi Trabajo Final en Casa del Joven en Córdoba, donde participé en espacios de escucha, talleres terapéuticos y hospital de día, acompañando a jóvenes en procesos de crecimiento y bienestar emocional junto a profesionales de distintas disciplinas.',
+		text: 'Durante mi formación, realicé prácticas supervisadas y mi Trabajo Final en Casa del Joven en Córdoba, donde participé en espacios de escucha, talleres terapéuticos y en hospital de día. Acompañé a jóvenes en su proceso terapéutico, brindando herramientas para mejorar su calidad de vida junto a un equipo interdisciplinario.',
 		image: highlight02,
 		mobileImage: highlight02mobile,
 		imageWidth: highlight02.width,
