--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -23,7 +23,7 @@ const { footerAbout, footerColumns, subFooter } = footerNavigationData
             <!-- Logo y About -->
             <div>
                 <a aria-label="website logo" aria-current="page" class="footer__main-brand" href="/foxi-astro-theme/">
-                    <img src={footerAbout.logo.src} alt={footerAbout.logo.alt} width="32" height="32" />
+                    <img src={footerAbout.logo.src} alt={footerAbout.logo.alt} width="32" height="32" style="border-radius: 50px;" />
                     {footerAbout.logo.text}
                 </a>
                 <!-- <p>{footerAbout.aboutText}</p> -->
