--- a/src/components/ui/NavigationBar.astro
+++ b/src/components/ui/NavigationBar.astro
@@ -43,7 +43,7 @@ const savedNavActions = navActions.map((action) => ({
 		<nav aria-label="main navigation" role="navigation" class="header__nav">
 			<!-- Logo -->
 			<a href="/foxi-astro-theme/" class="header__logo">
-				<img src={logo.src} alt={logo.alt} width="48" height="48" />
+				<img src={logo.src} alt={logo.alt} width="48" height="48" style="border-radius: 50px;"/>
 				<span>{logo.text}</span>
 			</a>
 
