--- a/src/components/blocks/CTA/BasicDark.astro
+++ b/src/components/blocks/CTA/BasicDark.astro
@@ -16,7 +16,7 @@ import { Image } from 'astro:assets'
 import Highlight from '../../ui/Highlight.astro'
 
 // Content
-import ctaImage from '../../../assets/cta-dark-bg.webp'
+import ctaImage from '../../../assets/bg-priscila.webp'
 import badge from '../../../assets/badge.svg'
 ---
 
@@ -27,7 +27,7 @@ import badge from '../../../assets/badge.svg'
 			<CTA
 				title="Un primer paso para mejorar tu bienestar"
 				text="No es necesario que atravieses una crisis para comenzar. La terapia y las evaluaciones psicológicas son herramientas para cuidar de vos, ganar confianza y sentirte mejor día a día. Estoy para acompañarte."
-				mode="dark"
+				mode="light"
 				bg={ctaImage}
 			>
 				<ChipNotification radius="rounded-full" classes="mb-6 box">
