add bg-priscila on index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ const faqHome = faqData.filter((faq) => faq.category === 'home')
 
 // Content
 // - Testimonial background
-import testimonialBackground from '../assets/testimonial-bg-01.webp'
+import testimonialBackground from '../assets/bg-priscila.webp'
 // - SEO
 const SEO = {
 	title: 'Lic. Priscila Giménez | Terapia y Evaluaciones Psicológicas',
